--- a/views/index.erb
+++ b/views/index.erb
@@ -2,3 +2,8 @@
 <div style= 'border: 2px solid black'>
 <img src='http://bit.ly/1eze8aE'>
 </div>
+
+<h1>
+  My name is
+  <%= ["Amigo", "Oscar", "Viking"].sample%>
+  </h1>
