--- a/views/index.erb
+++ b/views/index.erb
@@ -5,3 +5,16 @@
 <div style= 'border: 2px solid black'>
   <img src='http://bit.ly/1eze8aE'>
 </div>
+
+<br>
+
+<form action="/named-cat">
+  <div>
+    <!-- <label for="name">Name:</label> -->
+    <input type='text' name='name', placeholder='Enter a cat name'>
+  </div>
+  <br>
+  <div>
+    <input type='submit' value='Name the cat'>
+    </div>
+</form>
